test/errors/trying_to_overload_generic_function.dmd
function add(a, b)
    return a + b

function add(a, b)
    return a * b

--- Output
This function is already defined. Generic functions can't be overloaded

3| 
4| function add(a, b)
   ^
---